# Kerosene

./: .gitignore  AGENTS.md  Api Reference  DAYLY_LOG.md  README.md  STORYBOOK_SCREEN_INVENTORY.md  arm-vault.ps1  arm-vault.sh  backup.sql  cert-generator.sh  docker-compose.yml  dockerfile  ecs-task.json  kerosene.sql  panic.sh
Again/: settings.gradle.kts
backend/: build.gradle.kts
backend/adapters/bitcoin_core_backend/: pyproject.toml  requirements.txt  wsgi.py
backend/adapters/bitcoin_core_backend/bitcoin_core_backend/: __init__.py  app.py  config.py  errors.py  rpc.py  services.py  store.py  validation.py
backend/adapters/bitcoin_core_backend/docs/: README.md
backend/adapters/bitcoin_core_backend/tests/: test_app.py  test_store.py  test_validation.py
docs/: API_REFERENCE.md  APK.md  APP.md  ARCHITECTURE.md  DOCUMENTATION_AUDIT.md  FEATURES_AND_STATES.md  FRONTEND_API_USAGE.md  FRONTEND_BACKEND_UI_AUDIT.md  FRONTEND_DESIGN_SYSTEM.md  FRONTEND_NOTIFICATION_SYSTEM.md  IMPLEMENTATION_NEXT_STEPS.md  INFRASTRUCTURE.md  KEROSENE_MASTER_REFERENCE.md  KFE_ENDPOINT_MIGRATION.md  MOCKS_IMPLEMENTATION_PLAN.md  PRODUCTION_OPERATIONS.md  PRODUCTION_READINESS.md  README.md  RUNBOOK_MANUAL_RECONCILIATION.md  ULTIMATE_REFACTOR.md  (+4 more)
docs-final/: 01-overview.md  02-architecture.md  03-backend.md  04-api.md  05-frontend.md  06-security.md  07-infrastructure.md  08-payments.md  09-realtime-notifications.md  10-state-machine.md  11-treasury.md  12-limitations.md
frontend/native/: Cargo.toml
frontend/native/src/: api.rs  bridge_generated.rs  bridge_generated_io.rs  lib.rs
(+3200 files in other folders)
