[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Arti: A implementação do Tor em Rust
arti-client = { version = "0.26.0", features = ["tokio", "rustls"] }
tor-rtcompat = { version = "0.26.0" }

# Runtime assíncrono para Arti
tokio = { version = "1.36.0", features = ["full"] }

# Tratamento de erros simplificado
anyhow = "1.0.80"

# Ponte entre Rust e Flutter/Dart
flutter_rust_bridge = "1.82.6"

[dev-dependencies]
flutter_rust_bridge_codegen = "=1.82.6"
