[project]
name = "kerosene-bitcoin-core-backend"
version = "0.1.0"
description = "Secure Flask backend module for Bitcoin Core wallet and transaction operations."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
